feat: finished git tutorial

--- a/training_materials/1.1.0_git_tutorial.md
+++ b/training_materials/1.1.0_git_tutorial.md
@@ -52,7 +52,17 @@ You should now have Git installed and accessible from VS Code's terminal.
 ### Objective
 Set up your Git identity and preferences for the first time.
 
-### Step 1: Configure Your Identity
+### Step 1: Check Current Configuration
+
+First, let's see what Git configuration already exists:
+
+```bash
+git config --global --list
+```
+
+This shows all current global settings. You might see some existing configuration or get no output if this is your first time using Git.
+
+### Step 2: Configure Your Identity
 
 In the VS Code terminal, run these commands (replace with your actual name and email):
 
@@ -64,7 +74,7 @@ git config --global user.name "Your Full Name"
 git config --global user.email "your.email@example.com"
 ```
 
-### Step 2: Set VS Code as Default Editor
+### Step 3: Set VS Code as Default Editor
 
 Configure Git to use VS Code as your default editor:
 
@@ -72,7 +82,7 @@ Configure Git to use VS Code as your default editor:
 git config --global core.editor "code --wait"
 ```
 
-### Step 3: Configure Line Endings
+### Step 4: Configure Line Endings
 
 **For Windows users:**
 ```bash
@@ -84,9 +94,54 @@ git config --global core.autocrlf true
 git config --global core.autocrlf input
 ```
 
-### Step 4: Verify Configuration
+**Understanding Line Endings Configuration:**
 
-View your global Git configuration:
+The command `git config --global core.autocrlf input` configures how Git handles line endings on Mac/Linux systems.
+
+**What it does:**
+
+- **`autocrlf`** stands for "automatic carriage return line feed"
+- **`input`** means Git will:
+  - **When checking OUT code**: Leave line endings as-is (LF only, which Mac/Linux expect)
+  - **When checking IN code**: Convert any CRLF (Windows-style) line endings to LF (Unix-style)
+
+**Why this matters:**
+
+Different operating systems use different characters to mark the end of a line:
+- **Windows**: Uses CRLF (Carriage Return + Line Feed: `\r\n`)
+- **Mac/Linux**: Uses LF only (Line Feed: `\n`)
+
+**The `input` setting prevents problems when:**
+1. Someone accidentally introduces Windows-style line endings (CRLF) into your files
+2. You're collaborating with Windows users - Git will normalize line endings when committing
+3. You checkout code that may have mixed line endings
+
+**Example scenario:**
+- You're on Mac, collaborating with a Windows user
+- Windows user commits files with CRLF line endings
+- When you checkout: Files keep their LF endings (what Mac expects)
+- When you commit: Any accidental CRLF gets converted to LF
+- Repository stays consistent with Unix-style line endings
+
+This is the recommended setting for Mac/Linux users in mixed-OS teams.
+
+### Step 5: Verify Configuration
+
+View your global Git configuration to confirm all settings:
+
+```bash
+git config --global --list
+```
+
+**Expected output should now include:**
+```
+user.name=Your Full Name
+user.email=your.email@example.com
+core.editor=code --wait
+core.autocrlf=true (or input for Mac/Linux)
+```
+
+You can also view the configuration file directly in VS Code:
 
 ```bash
 git config --global -e
@@ -177,6 +232,8 @@ code .
 ```
 
 *This opens the current directory in a new VS Code window*
+
+Accept the prompt to trust authors.
 
 ### Step 3: Initialize Git Repository
 
@@ -521,6 +578,19 @@ See what changed in your working directory:
 git diff
 ```
 
+**Expected output:**
+```
+diff --git a/file1.txt b/file1.txt
+index abcc8cc..cda09d3 100644
+--- a/file1.txt
++++ b/file1.txt
+@@ -1,3 +1,4 @@
+ Hello World
+ Additional line
+ Another line after staging
++This change needs review
+```
+
 This shows the differences between working directory and staging area.
 
 ### Step 3: Stage and View Staged Changes
@@ -534,6 +604,18 @@ View staged changes:
 git diff --staged
 ```
 
+**Expected output:**
+```bash
+diff --git a/file1.txt b/file1.txt
+index abcc8cc..cda09d3 100644
+--- a/file1.txt
++++ b/file1.txt
+@@ -1,3 +1,4 @@
+ Hello World
+ Additional line
+ Another line after staging
++This change needs review
+```
 This shows differences between staging area and last commit.
 
 ### Step 4: Set Up VS Code as Diff Tool
@@ -554,6 +636,12 @@ git config --global difftool.vscode.cmd 'code --wait --diff $LOCAL $REMOTE'
 git difftool --staged
 ```
 
+**Expected output:**
+```bash
+Viewing (1/1): 'file1.txt'
+Launch 'vscode' [Y/n]? 
+```
+
 This will open VS Code showing a visual comparison of your changes.
 
 ### Step 6: View Commit History
@@ -572,10 +660,44 @@ git log --oneline
 git log --oneline --graph --all
 ```
 
+**Expected output:**
+```bash
+* bf6fceb (HEAD -> main) Docs: Update API documentation for user endpoints
+* a9e0a32 Add: New user profile feature
+* c5d11c6 Fix: Resolve login validation issue
+* d8a7fa0 Update file1.txt with additional content
+* 3a0f57b Initial commit: Add file1.txt and file2.txt
+```
+
 ### Step 7: View a Specific Commit
 
 ```bash
-git show HEAD~1
+git show 3a0f57b # Show the commit with the hash 3a0f57b
+```
+
+**Expected output:**
+
+```bash
+commit 3a0f57bad24150f87a674a35f8148eb0318b8df9
+Author: ShocOne <62835948+ShocOne@users.noreply.github.com>
+Date:   Thu Aug 28 15:27:55 2025 +0100
+
+    Initial commit: Add file1.txt and file2.txt
+
+diff --git a/file1.txt b/file1.txt
+new file mode 100644
+index 0000000..557db03
+--- /dev/null
++++ b/file1.txt
+@@ -0,0 +1 @@
++Hello World
+diff --git a/file2.txt b/file2.txt
+new file mode 100644
+index 0000000..4ab7e6d
+--- /dev/null
++++ b/file2.txt
+@@ -0,0 +1 @@
++This is file 2
 ```
 
 This shows the commit before the latest one.
@@ -610,6 +732,19 @@ Verify the change was undone:
 git status
 ```
 
+**Expected output:**
+
+```bash
+On branch main
+Changes to be committed:
+  (use "git restore --staged <file>..." to unstage)
+        modified:   file1.txt
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        mistake.txt
+```
+
 ### Step 3: Remove Untracked Files
 
 ```bash
@@ -617,6 +752,13 @@ git clean -fd
 ```
 
 **Note:** `-f` forces the operation, `-d` removes directories
+
+
+**Expected output:**
+
+```bash
+Removing mistake.txt
+```
 
 ### Step 4: Practice Unstaging Changes
 
@@ -637,6 +779,20 @@ Check status:
 git status
 ```
 
+**Expected output:**
+
+```bash
+On branch main
+Changes to be committed:
+  (use "git restore --staged <file>..." to unstage)
+        modified:   file1.txt
+
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        modified:   file2.txt
+```
+
 ### Step 5: Restore File from Previous Commit
 
 Delete a file and commit:
@@ -644,6 +800,14 @@ Delete a file and commit:
 ```bash
 git rm bugfix.txt
 git commit -m "Remove bugfix.txt"
+```
+
+**Expected output:**
+
+```bash
+[main 5986fe8] Remove bugfix.txt
+ 2 files changed, 1 insertion(+), 1 deletion(-)
+ delete mode 100644 bugfix.txt
 ```
 
 Restore the file from the previous commit:
@@ -654,6 +818,22 @@ git restore --source=HEAD~1 bugfix.txt
 Check status:
 ```bash
 git status
+```
+
+**Expected output:**
+
+```bash
+On branch main
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        modified:   file2.txt
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        bugfix.txt
+
+no changes added to commit (use "git add" and/or "git commit -a")
 ```
 
 ### Exercise Complete ✅
@@ -677,9 +857,37 @@ Check status:
 git status
 ```
 
+**Expected output:**
+
+```bash
+On branch main
+Changes to be committed:
+  (use "git restore --staged <file>..." to unstage)
+        renamed:    file1.txt -> main.txt
+
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        modified:   file2.txt
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        bugfix.txt
+
+```
+
 Commit the rename:
 ```bash
 git commit -m "Rename file1.txt to main.txt"
+```
+
+**Expected output:**
+
+```bash
+[main 06396c8] Rename file1.txt to main.txt
+ 1 file changed, 0 insertions(+), 0 deletions(-)
+ rename file1.txt => main.txt (100%)
+
 ```
 
 ### Step 2: Move Files to Subdirectory
@@ -698,10 +906,35 @@ git status
 git commit -m "Move files to src directory"
 ```
 
+**Expected output:**
+
+```bash
+On branch main
+Changes to be committed:
+  (use "git restore --staged <file>..." to unstage)
+        renamed:    feature.txt -> src/feature.txt
+        renamed:    main.txt -> src/main.txt
+
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        modified:   file2.txt
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        bugfix.txt
+
+[main 8ca65c4] Move files to src directory
+ 2 files changed, 0 insertions(+), 0 deletions(-)
+ rename feature.txt => src/feature.txt (100%)
+ rename main.txt => src/main.txt (100%)
+
+```
+
 ### Step 3: Remove Files Properly
 
 ```bash
-git rm file2.txt
+git rm file2.txt -f
 ```
 
 Check status:
@@ -709,9 +942,32 @@ Check status:
 git status
 ```
 
+**Expected output:**
+
+```bash
+On branch main
+Changes to be committed:
+  (use "git restore --staged <file>..." to unstage)
+        deleted:    file2.txt
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        bugfix.txt
+
+```
+
 Commit the deletion:
 ```bash
 git commit -m "Remove file2.txt - no longer needed"
+```
+
+**Expected output:**
+
+```bash
+[main 0b63517] Remove file2.txt - no longer needed
+ 1 file changed, 2 deletions(-)
+ delete mode 100644 file2.txt
+
 ```
 
 ### Exercise Complete ✅
@@ -740,6 +996,18 @@ git status
 
 You'll see these untracked files.
 
+**Expected output:**
+
+```bash
+On branch main
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        app.exe
+        bugfix.txt
+        logs/
+
+```
+
 ### Step 3: Create .gitignore File
 
 ```bash
@@ -756,11 +1024,33 @@ git status
 
 You should only see .gitignore as untracked now.
 
+**Expected output:**
+
+```bash
+On branch main
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        .gitignore
+        bugfix.txt
+
+nothing added to commit but untracked files present (use "git add" to track)
+
+```
+
 ### Step 5: Commit .gitignore
 
 ```bash
 git add .gitignore
 git commit -m "Add .gitignore to exclude logs and executables"
+```
+
+**Expected output:**
+
+```bash
+[main fd3dfbf] Add .gitignore to exclude logs and executables
+ 1 file changed, 3 insertions(+)
+ create mode 100644 .gitignore
+
 ```
 
 ### Step 6: Test Ignore Rules
@@ -771,6 +1061,18 @@ git status
 ```
 
 The new log file should not appear in the status.
+
+**Expected output:**
+
+```bash
+On branch main
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        bugfix.txt
+
+nothing added to commit but untracked files present (use "git add" to track)
+
+```
 
 ### Exercise Complete ✅
 You can now properly ignore files that shouldn't be tracked.
@@ -798,6 +1100,23 @@ git status
 
 You'll see the file is modified but not staged.
 
+**Expected output:**
+
+```bash
+On branch main
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        modified:   src/main.txt
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        bugfix.txt
+
+no changes added to commit (use "git add" and/or "git commit -a")
+
+```
+
 ### Step 3: Commit with -a Flag
 
 Skip staging and commit directly:
@@ -807,6 +1126,14 @@ git commit -am "Fix the bug that prevented users from signing up"
 ```
 
 **Note:** The `-a` flag stages all modified tracked files and commits them in one step.
+
+**Expected output:**
+
+```bash
+[main 73e81cb] Fix the bug that prevented users from signing up
+ 1 file changed, 1 insertion(+)
+
+```
 
 ### Important Warning
 
@@ -836,9 +1163,36 @@ echo "sky" > file2.js
 git status
 ```
 
+**Expected output:**
+
+```bash
+On branch main
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        modified:   src/main.txt
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        bugfix.txt
+        file2.js
+
+no changes added to commit (use "git add" and/or "git commit -a")
+
+```
+
 **Short status:**
 ```bash
 git status -s
+```
+
+**Expected output:**
+
+```bash
+ M src/main.txt
+?? bugfix.txt
+?? file2.js
+
 ```
 
 ### Step 3: Understanding Short Status
@@ -870,6 +1224,15 @@ You should see:
 - `M ` (green M, space) = Changes staged
 - `??` (red) = Untracked file
 
+**Expected output:**
+
+```bash
+M  src/main.txt
+?? bugfix.txt
+?? file2.js
+
+```
+
 ### Step 5: Modify Staged File
 
 ```bash
@@ -883,6 +1246,15 @@ git status -s
 
 Now you should see:
 - `MM` = File has both staged and unstaged changes
+
+**Expected output:**
+
+```bash
+MM src/main.txt
+?? bugfix.txt
+?? file2.js
+
+```
 
 ### Exercise Complete ✅
 You can now quickly interpret Git's short status format.
@@ -908,6 +1280,36 @@ See what's going in the next commit:
 git diff --staged
 ```
 
+**Expected output:**
+
+```bash
+diff --git a/bugfix.txt b/bugfix.txt
+new file mode 100644
+index 0000000..b546221
+--- /dev/null
++++ b/bugfix.txt
+@@ -0,0 +1 @@
++Bug fix content
+diff --git a/file2.js b/file2.js
+new file mode 100644
+index 0000000..f5e95e7
+--- /dev/null
++++ b/file2.js
+@@ -0,0 +1 @@
++sky
+diff --git a/src/main.txt b/src/main.txt
+index 7026656..b1f52d2 100644
+--- a/src/main.txt
++++ b/src/main.txt
+@@ -3,3 +3,5 @@ Additional line
+ Another line after staging
+ This change needs review
+ test
++sky
++ocean
+```
+
+
 ### Step 3: Understanding Diff Output
 
 The diff output shows:
@@ -930,6 +1332,24 @@ See what's different between working directory and staging area:
 git diff
 ```
 
+**Expected output:**
+
+```bash
+diff --git a/src/main.txt b/src/main.txt
+index b1f52d2..3b18e51 100644
+--- a/src/main.txt
++++ b/src/main.txt
+@@ -1,7 +1 @@
+-Hello World
+-Additional line
+-Another line after staging
+-This change needs review
+-test
+-sky
+-ocean
++hello world
+```
+
 ### Step 6: Compare Both
 
 **Staged changes (going in next commit):**
@@ -940,6 +1360,35 @@ git diff --staged
 **Unstaged changes (not going in next commit):**
 ```bash
 git diff
+```
+
+**Expected output:**
+
+```bash
+diff --git a/bugfix.txt b/bugfix.txt
+new file mode 100644
+index 0000000..b546221
+--- /dev/null
++++ b/bugfix.txt
+@@ -0,0 +1 @@
++Bug fix content
+diff --git a/file2.js b/file2.js
+new file mode 100644
+index 0000000..f5e95e7
+--- /dev/null
++++ b/file2.js
+@@ -0,0 +1 @@
++sky
+diff --git a/src/main.txt b/src/main.txt
+index 7026656..b1f52d2 100644
+--- a/src/main.txt
++++ b/src/main.txt
+@@ -3,3 +3,5 @@ Additional line
+ Another line after staging
+ This change needs review
+ test
++sky
++ocean
 ```
 
 ### Exercise Complete ✅
@@ -1017,6 +1466,16 @@ git add .
 git commit -m "Add sky and ocean to main.txt"
 ```
 
+
+**Expected output:**
+
+```bash
+[main f5a0198] Add sky and ocean to main.txt
+ 3 files changed, 3 insertions(+), 5 deletions(-)
+ create mode 100644 bugfix.txt
+ create mode 100644 file2.js
+```
+
 ### Step 2: View Full History
 
 ```bash
@@ -1032,6 +1491,38 @@ Navigate with:
 - `Space` = Next page
 - `q` = Quit
 
+**Expected output:**
+
+```bash
+commit f5a0198e7f2b3b64921164871d4c3574414294dd (HEAD -> main)
+Author: ShocOne <62835948+ShocOne@users.noreply.github.com>
+Date:   Thu Aug 28 16:01:10 2025 +0100
+
+    Add sky and ocean to main.txt
+
+commit 73e81cbaf424f8e7f9b2622a6b3a331245cce1ad
+Author: ShocOne <62835948+ShocOne@users.noreply.github.com>
+Date:   Thu Aug 28 15:54:09 2025 +0100
+
+    Fix the bug that prevented users from signing up
+
+commit fd3dfbfc8cececd0c5621ab6dc3de2a18761f6de
+Author: ShocOne <62835948+ShocOne@users.noreply.github.com>
+Date:   Thu Aug 28 15:49:10 2025 +0100
+
+    Add .gitignore to exclude logs and executables
+
+commit 0b63517309b75ec0ac235dbbb287be19099ee99e
+Author: ShocOne <62835948+ShocOne@users.noreply.github.com>
+Date:   Thu Aug 28 15:46:19 2025 +0100
+
+    Remove file2.txt - no longer needed
+
+commit 8ca65c4f509f18e1105ba9dc30776148b93037ac
+Author: ShocOne <62835948+ShocOne@users.noreply.github.com>
+Date:   Thu Aug 28 15:44:42 2025 +0100
+```
+
 ### Step 3: View Concise History
 
 ```bash
@@ -1039,6 +1530,23 @@ git log --oneline
 ```
 
 Shows shortened hash and commit message only.
+
+**Expected output:**
+
+```bash
+f5a0198 (HEAD -> main) Add sky and ocean to main.txt
+73e81cb Fix the bug that prevented users from signing up
+fd3dfbf Add .gitignore to exclude logs and executables
+0b63517 Remove file2.txt - no longer needed
+8ca65c4 Move files to src directory
+06396c8 Rename file1.txt to main.txt
+5986fe8 Remove bugfix.txt
+bf6fceb Docs: Update API documentation for user endpoints
+a9e0a32 Add: New user profile feature
+c5d11c6 Fix: Resolve login validation issue
+d8a7fa0 Update file1.txt with additional content
+3a0f57b Initial commit: Add file1.txt and file2.txt
+```
 
 ### Step 4: Reverse History Order
 
@@ -1048,10 +1556,40 @@ git log --oneline --reverse
 
 Shows oldest commits first.
 
+```bash
+3a0f57b Initial commit: Add file1.txt and file2.txt
+d8a7fa0 Update file1.txt with additional content
+c5d11c6 Fix: Resolve login validation issue
+a9e0a32 Add: New user profile feature
+bf6fceb Docs: Update API documentation for user endpoints
+5986fe8 Remove bugfix.txt
+06396c8 Rename file1.txt to main.txt
+8ca65c4 Move files to src directory
+0b63517 Remove file2.txt - no longer needed
+fd3dfbf Add .gitignore to exclude logs and executables
+73e81cb Fix the bug that prevented users from signing up
+f5a0198 (HEAD -> main) Add sky and ocean to main.txt
+```
+
 ### Step 5: View History with Graph
 
 ```bash
 git log --oneline --graph --all
+```
+
+```bash
+* f5a0198 (HEAD -> main) Add sky and ocean to main.txt
+* 73e81cb Fix the bug that prevented users from signing up
+* fd3dfbf Add .gitignore to exclude logs and executables
+* 0b63517 Remove file2.txt - no longer needed
+* 8ca65c4 Move files to src directory
+* 06396c8 Rename file1.txt to main.txt
+* 5986fe8 Remove bugfix.txt
+* bf6fceb Docs: Update API documentation for user endpoints
+* a9e0a32 Add: New user profile feature
+* c5d11c6 Fix: Resolve login validation issue
+* d8a7fa0 Update file1.txt with additional content
+* 3a0f57b Initial commit: Add file1.txt and file2.txt
 ```
 
 Shows branch structure (more useful with multiple branches).
@@ -1090,6 +1628,8 @@ git show abc1234
 git show HEAD
 ```
 
+Use q to quit.
+
 **Previous commit:**
 ```bash
 git show HEAD~1
@@ -1107,16 +1647,31 @@ View the exact version of a file from a specific commit:
 git show HEAD~1:src/main.txt
 ```
 
+```bash
+Hello World
+Additional line
+Another line after staging
+This change needs review
+test
+```
+
 ### Step 5: List All Files in a Commit
 
 ```bash
 git ls-tree HEAD~1
 ```
 
+
+
 This shows all files and directories in that commit with:
 - Object type (blob for files, tree for directories)
 - Object hash
 - File name
+
+```bash
+100644 blob bb7c502dce0e24ba9761e3a2cbc1f6a7b54ce3bf    .gitignore
+040000 tree 28e9c2f9dae4ce819dc0cf2028d488da2c10dd62    src
+```
 
 ### Step 6: View Object Contents
 
@@ -1149,6 +1704,17 @@ git add .
 git status
 ```
 
+
+**Expected output:**
+
+```bash
+On branch main
+Changes to be committed:
+  (use "git restore --staged <file>..." to unstage)
+        new file:   file3.txt
+        modified:   src/main.txt
+```
+
 Both files should be staged (green).
 
 ### Step 3: Unstage a Modified File
@@ -1161,6 +1727,13 @@ git restore --staged src/main.txt
 
 ```bash
 git status -s
+```
+
+**Expected output:**
+
+```bash
+A  file3.txt
+M src/main.txt
 ```
 
 You should see:
@@ -1180,6 +1753,22 @@ git status
 ```
 
 `file3.txt` should now be untracked.
+
+**Expected output:**
+
+```bash
+On branch main
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        modified:   src/main.txt
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        file3.txt
+
+no changes added to commit (use "git add" and/or "git commit -a")
+```
 
 ### Step 7: Understand How Restore Works
 
@@ -1211,6 +1800,23 @@ echo "wrong content" >> src/main.txt
 git status
 ```
 
+**Expected output:**
+
+```bash
+On branch main
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git restore <file>..." to discard changes in working directory)
+        modified:   src/main.txt
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        file3.txt
+        mistake.txt
+
+no changes added to commit (use "git add" and/or "git commit -a")
+```
+
 ### Step 3: Restore Tracked File
 
 Undo changes to a tracked file:
@@ -1226,12 +1832,28 @@ git status
 
 `src/main.txt` should no longer appear as modified.
 
+```bash
+On branch main
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        file3.txt
+        mistake.txt
+
+nothing added to commit but untracked files present (use "git add" to track)
+```
+
 ### Step 5: Remove Untracked Files
 
 Remove untracked files and directories:
 ```bash
 git clean -fd
 ```
+
+```bash
+Removing file3.txt
+Removing mistake.txt
+```
+
 
 Flags:
 - `-f` = Force (required for safety)
@@ -1242,8 +1864,12 @@ Flags:
 ```bash
 git status
 ```
-
 Should show "working tree clean".
+
+```bash
+On branch main
+nothing to commit, working tree clean
+```
 
 ### Step 7: Understanding the Restore Command
 
@@ -1274,6 +1900,12 @@ git rm src/main.txt
 git commit -m "Delete main.txt"
 ```
 
+```bash
+[main 4ffcb41] Delete main.txt
+ 1 file changed, 1 deletion(-)
+ delete mode 100644 src/main.txt
+```
+
 ### Step 3: Realize the Mistake
 
 ```bash
@@ -1282,6 +1914,11 @@ git status
 
 The file is now gone from both working directory and staging area.
 
+```bash
+On branch main
+nothing to commit, working tree clean
+```
+
 ### Step 4: View History
 
 ```bash
@@ -1289,6 +1926,24 @@ git log --oneline
 ```
 
 Find the commit where the file still existed (before the deletion).
+
+```bash
+4ffcb41 (HEAD -> main) Delete main.txt
+f5a0198 Add sky and ocean to main.txt
+73e81cb Fix the bug that prevented users from signing up
+fd3dfbf Add .gitignore to exclude logs and executables
+0b63517 Remove file2.txt - no longer needed
+8ca65c4 Move files to src directory
+06396c8 Rename file1.txt to main.txt
+5986fe8 Remove bugfix.txt
+bf6fceb Docs: Update API documentation for user endpoints
+a9e0a32 Add: New user profile feature
+c5d11c6 Fix: Resolve login validation issue
+d8a7fa0 Update file1.txt with additional content
+3a0f57b Initial commit: Add file1.txt and file2.txt
+```
+
+In this case, the commit before is 'f5a0198 Add sky and ocean to main.txt'
 
 ### Step 5: Restore File from Previous Commit
 
@@ -1309,6 +1964,15 @@ git status
 
 `src/main.txt` should appear as untracked.
 
+```bash
+On branch main
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+        src/main.txt
+
+nothing added to commit but untracked files present (use "git add" to track)
+```
+
 ### Step 7: Check File Contents
 
 ```bash
@@ -1317,11 +1981,21 @@ cat src/main.txt
 
 The file should contain the content from the previous commit.
 
+```bash
+hello world
+```
+
 ### Step 8: Add and Commit Restored File
 
 ```bash
 git add src/main.txt
 git commit -m "Restore main.txt from previous commit"
+```
+
+```bash
+[main 63e4ceb] Restore main.txt from previous commit
+ 1 file changed, 1 insertion(+)
+ create mode 100644 src/main.txt
 ```
 
 ### Exercise Complete ✅
