--- a/training_materials/0.0.0_module_overview.md
+++ b/training_materials/0.0.0_module_overview.md
@@ -32,7 +32,6 @@
 - Apply hands-on experience with Git and Terraform through practical exercises
 
 ### Day 1 (Instructor Led)
-<<<<<<< HEAD:training_materials/0.0.0_module_overview.md
 
 #### Topic 1.0: Module Overview
 - What problems are we solving ?
@@ -41,8 +40,6 @@
 - vs code fundamentals
 - git fundamentals
 - 1
-=======
->>>>>>> a008353 (tweaks):support_materials/00_module_overview.md
 
 #### Topic 1.1: Infrastructure as Code principles - why config as code beats click ops *(2 hours)*
 
@@ -68,11 +65,12 @@
 - [Keyboard shortcuts reference](https://code.visualstudio.com/assets/docs/getstarted/tips-and-tricks/KeyboardReferenceSheet.png)
 - [Tips and tricks](https://code.visualstudio.com/docs/getstarted/tips-and-tricks) 
 
-#### Topic 1.3: Git fundamentals for infrastructure management *(2 hours)*
+#### Topic 1.3: Git fundamentals for infrastructure management *(3 hours)*
 
 - watch: [Git Tutorial for Beginners: Learn Git in 1 Hour](https://www.youtube.com/watch?v=8JJ101D3knE)
 - complete: [Git/GitHub beginner roadmap](https://roadmap.sh/git-github?r=git-github-beginner)
-- watch: [Oh My Git](https://ohmygit.org/)
+- complete: [Oh My Git](https://ohmygit.org/)
+- complete: [Git Tutorial](https://github.com/deploymenttheory/terraform-training-jamfpro/blob/main/training_materials/1.1.0_git_tutorial.md)
 
 #### Topic 1.4: Git Ops for infrastructure management *(2 hours)*
 
