feat: added 1st itteration of tf training for modules 1-19

--- a/training_materials/0.0.0_module_overview.md
+++ b/training_materials/0.0.0_module_overview.md
@@ -78,7 +78,6 @@
 - [Git/GitHub roadmap](https://roadmap.sh/git-github)
 - Branching strategies with GitLab flow
 - Release management with release-please
-<<<<<<< HEAD:training_materials/0.0.0_module_overview.md
 
 #### 1/2 Hack Day: Git + Terraform workflow mastery *(3 hours)*
 
@@ -87,7 +86,7 @@
 
 ### Module 1 Practice (Student-Led): Git + Terraform workflow mastery *(3 hours)*
 
-=======
+
 
 #### Hack Day Practice: Git + Terraform workflow mastery *(3 hours)*
 
@@ -124,7 +123,7 @@
 
 ### Module 1 Practice (Student-Led): Git + Terraform workflow mastery *(3 hours)*
 
->>>>>>> a008353 (tweaks):support_materials/00_module_overview.md
+
 This is a student-led practice session where the students will be given a series of tasks to complete.
 
 #### Practice 1.1: VS Code intro videos *(0.5 hours)*
@@ -134,10 +133,9 @@ This is a student-led practice session where the students will be given a series
 #### Practice 1.2: Git commands and workflow mastery *(2 hours)*
 
 - Complete: [Git/GitHub beginner roadmap](https://roadmap.sh/git-github?r=git-github-beginner) 
-<<<<<<< HEAD:training_materials/0.0.0_module_overview.md
-=======
+
 - Complete: [Learn Git Branching](https://learngitbranching.js.org/)
->>>>>>> a008353 (tweaks):support_materials/00_module_overview.md
+
 - Complete: [Oh My Git](https://ohmygit.org/)
 
 #### Prerequisites:
@@ -294,3 +292,6 @@ This is a student-led practice session where the students will be given a series
 
 **Duration: 8 hours**
 ---
+
+Misc links
+[terraform best practices](https://www.terraform-best-practices.com/)
